git commit -m "initial upload"

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Pickett!</h1>
+    <h1>The Daily AI Pickett</h1>
+    <p>Welcome to the official GitHub page for The Daily AI Pickett!</p>
 </body>
 </html>
