--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <h1>The Daily AI Pickett</h1>
     <p>Welcome to the official GitHub page for The Daily AI Pickett!</p>
 
-    <p>Goon</p>
+    <a href="today.html">View today's AI Pickett</a>
 
     
-    <h3>Register</h3>
+    <!-- <h3>Register</h3>
 
     <input id="username" placeholder="username">
     <input id="email" placeholder="email">
     <input id="password" type="password" placeholder="password">
-    <button onclick="register()">Sign Up</button>
+    <button onclick="register()">Sign Up</button> -->
 
 
 </body>
