--- a/today.html
+++ b/today.html
@@ -4,7 +4,7 @@
   <title>Today's Image</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
-    const supabase = supabase.createClient(
+    const db = supabase.createClient(
       "https://zdtpcfxzncehhnvmglsj.supabase.co",
       "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InpkdHBjZnh6bmNlaGhudm1nbHNqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI4MzcwMDYsImV4cCI6MjA3ODQxMzAwNn0.vlwKNgq0Gqyg7e747O7s3KCVw2J9bZQfS5zzW78X6RY"
     );
@@ -22,7 +22,7 @@
 async function loadTodayImage() {
   const today = new Date().toISOString().split("T")[0]; // YYYY-MM-DD
 
-  const { data, error } = await supabase
+  const { data, error } = await db
     .from("today_image")
     .select("image_url")
     .eq("date", today)
