--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
     <a href="today.html"><button>View today's AI Pickett</button></a>
     <a href="all.html"><button class="light-button">Archive →</button></a>
     
+    <br><br>
+    <h3>About Us</h3>
+    <p>We are dedicated to generating and sharing AI-created images of Pickett, the beloved character from Ambrose. Our goal is to explore the creative possibilities of AI in art while celebrating this iconic figure.</p>
+    
+    <br>
+    <h3>Contribute</h3>
+    <p>If you have made your own AI Picketts, upload them here to be featured in the custom AI Pickett section</p>
+    <button onclick="openUploadModal()">Upload Your AI Pickett</button>
     <!-- <h3>Register</h3>
 
     <input id="username" placeholder="username">
@@ -32,6 +40,16 @@
     <input id="password" type="password" placeholder="password">
     <button onclick="register()">Sign Up</button> -->
     </div>
+
+
+        <div class="chat-box">
+        <div id="messages" class="messages"></div>
+
+        <input id="chat-username" placeholder="username">
+        <input id="chat-input" placeholder="type message">
+        <button onclick="sendMessage()">Send</button>
+    </div>
+
 <div id="footer"></div>
 </body>
 
