--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="navbar"></div><br><br>
+    <div id="navbar"></div><br><br><br><br>
 
     
     <div class="content-section">
@@ -38,7 +38,7 @@
 
 
 
-<div class="chat-box">
+<!-- <div class="chat-box">
 
   <span class="chat-header">
     <h2 style="text-align: center;">Chat Room</h2>
@@ -53,7 +53,6 @@
     <button onclick="sendMessage()" style="align-content: right;">Send</button>
   </div>
   <hr>
-  <!-- Emote selector -->
   <div id="emote-picker" class="emote-picker hidden">
     <img class="emote-img" src="media/hehehe.gif" alt="😂" onclick="sendEmote('media/hehehe.gif')">
     <img class="emote-img" src="media/pig.gif" alt="🐷" onclick="sendEmote('media/pig.gif')">
@@ -65,7 +64,7 @@
     <img class="emote-img" src="media/goblingiant.gif" alt="👺" onclick="sendEmote('media/goblingiant.gif')">
     <img class="emote-img" src="media/bowler.gif" alt="🍬" onclick="sendEmote('media/bowler.gif')">
   </div>
-</div>
+</div> -->
 <br><br><br>
 
 <div id="footer"></div>
