--- a/login.html
+++ b/login.html
@@ -25,6 +25,6 @@
     <p>Don't have an account? <a href="register.html">Sign up here</a></p>
   </div>
 
-  <div id="footer"></div>
+  <!-- <div id="footer"></div> -->
 </body>
 </html>
