--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <div id="navbar"></div>
+  <div id="navbar"></div><br><br><br><br>
 
   <div class="content-section">
     <h1>Login</h1>
