--- a/today.html
+++ b/today.html
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href="stylesheet.css">
 </head>
 <body>
-    <div id="navbar"></div>
+    <div id="navbar"></div><br><br><br><br>
     <div class="content-section">
         <h1>Today's AI Pickett</h1>
         <div id="image-container">
