--- a/messages.html
+++ b/messages.html
@@ -55,6 +55,8 @@
                     <img class="emote-img" src="media/megalul.gif" alt="mega" onclick="sendEmote('media/megalul.gif')">
                     <img class="emote-img" src="media/khaby.gif" alt="khaby" onclick="sendEmote('media/khaby.gif')">
                     <img class="emote-img" src="media/negative67.gif" alt="67" onclick="sendEmote('media/negative67.gif')">
+                    <img class="emote-img" src="media/gordon.gif" alt="SMYW" onclick="sendEmote('media/gordon.gif')">
+                    <img class="emote-img" src="media/aibab.gif" alt="ai" onclick="sendEmote('media/aibab.gif')">
                 </div>
                 <br>
                 <div class="resize-handle"></div>
