--- a/messages.html
+++ b/messages.html
@@ -58,6 +58,9 @@
                     <img class="emote-img" src="media/gordon.gif" alt="SMYW" onclick="sendEmote('media/gordon.gif')">
                     <img class="emote-img" src="media/aibab.gif" alt="ai" onclick="sendEmote('media/aibab.gif')">
                     <img class="emote-img" src="media/thousand.gif" alt="yard" onclick="sendEmote('media/thousand.gif')">
+                    <img class="emote-img" src="media/taper.gif" alt="taper" onclick="sendEmote('media/taper.gif')">
+                    <img class="emote-img" src="media/thundercock-officer.gif" alt="cock" onclick="sendEmote('media/thundercock-officer.gif')">
+                    <img class="emote-img" src="media/pim.gif" alt="pim" onclick="sendEmote('media/pim.gif')">
                 </div>
                 <br>
                 <div class="resize-handle"></div>
