--- a/all.html
+++ b/all.html
@@ -52,6 +52,7 @@
                 imageEl.src = img.image_url;
                 imageEl.alt = `Pickett from ${img.date}`;
                 imageEl.style.width = "200px"; // adjust as needed
+                imageEl.style.height = "248px";
                 imageEl.style.margin = "10px";
                 imageEl.style.borderRadius = "10px";
                 container.appendChild(imageEl);
