--- a/messages.html
+++ b/messages.html
@@ -30,6 +30,7 @@
                 </div>
 
                 <div class="chat-input-area">
+                    <button onclick="toggleMedia()">Hide Media</button>
                     <input id="chat-username" placeholder="username">
                     <input id="chat-input" placeholder="type message">
                     <button onclick="sendMessage()">Send</button>
